--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "homepage": "https://gvodianytskyi.github.io/random-pics",
   "dependencies": {
     "axios": "^0.17.1",
+    "normalize.css": "^7.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-loading": "^1.0.3",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
-    "reset-css": "^2.2.1"
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -22,6 +22,8 @@
     "deploy": "npm run build&&gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^1.1.0"
+    "axios-mock-adapter": "^1.10.0",
+    "gh-pages": "^1.1.0",
+    "redux-mock-store": "^1.4.0"
   }
 }
